--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,25 @@ body {
   max-width: 1100px;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(100, 100, 100);
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #505050;
+}
+
 .margin__top {
   margin-top: 100px;
 }
