--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@ body {
   transition: 0.3s all ease-in;
 }
 .social__networks:hover {
-  color: white;
+  color: #C778DD;
+  text-shadow: 0 0 2px #C778DD;
 }
 
 .border__width {
