--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,4 +1,5 @@
-$gradient-bg-color: linear-gradient(90deg, #B79891 0%, #94716B 100%);
-$bg-green: #80A529;
+$bg-main: #282C33;
 
 $main-color: #C778DD;
+$white: #fff;
+$secondary-color: #ABB2BF;
